dfir_rs/tests/snapshots/surface_codegen__covid_tracing@graphvis_mermaid.snap
---
source: dfir_rs/tests/surface_codegen.rs
expression: df.meta_graph().unwrap().to_mermaid(cfg)
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_stream(contacts_recv)</code>"/]:::pullClass
2v1[\"(2v1) <code>flat_map(|(pid_a, pid_b, time)| [(pid_a, (pid_b, time)), (pid_b, (pid_a, time))])</code>"/]:::pullClass
3v1[\"(3v1) <code>union()</code>"/]:::pullClass
4v1[\"(4v1) <code>source_stream(diagnosed_recv)</code>"/]:::pullClass
5v1[\"(5v1) <code>join::&lt;'static&gt;()</code>"/]:::pullClass
6v1[\"<div style=text-align:center>(6v1)</div> <code>filter(|(_pid_a, ((_pid_b, t_contact), (t_from, t_to)))| {<br>    (t_from..=t_to).contains(&amp;t_contact)<br>})</code>"/]:::pullClass
7v1[\"(7v1) <code>map(|(_pid_a, (pid_b_t_contact, _t_from_to))| pid_b_t_contact)</code>"/]:::pullClass
8v1[/"(8v1) <code>tee()</code>"\]:::pushClass
9v1[\"(9v1) <code>map(|(pid, t)| (pid, (t, t + TRANSMISSIBLE_DURATION)))</code>"/]:::pullClass
10v1[\"(10v1) <code>defer_tick_lazy()</code>"/]:::pullClass
11v1[\"(11v1) <code>join::&lt;'static&gt;()</code>"/]:::pullClass
12v1[\"<div style=text-align:center>(12v1)</div> <code>map(|(_pid, ((name, phone), exposure))| {<br>    format!(&quot;[{}] To {}: Possible Exposure at t = {}&quot;, name, phone, exposure)<br>})</code>"/]:::pullClass
13v1[/"(13v1) <code>tee()</code>"\]:::pushClass
14v1[/"(14v1) <code>for_each(|msg| println!(&quot;{}&quot;, msg))</code>"\]:::pushClass
15v1[/"(15v1) <code>for_each(|msg| out_send.send(msg).unwrap())</code>"\]:::pushClass
16v1[\"(16v1) <code>source_stream(people_recv)</code>"/]:::pullClass
17v1["(17v1) <code>handoff</code>"]:::otherClass
18v1["(18v1) <code>handoff</code>"]:::otherClass
19v1["(19v1) <code>handoff</code>"]:::otherClass
20v1[\"(20v1) <code>identity()</code>"/]:::pullClass
21v1["(21v1) <code>handoff</code>"]:::otherClass
1v1-->2v1
4v1-->|0|3v1
7v1-->8v1
6v1-->7v1
5v1-->6v1
2v1-->|0|5v1
3v1-->|1|5v1
10v1-->|1|3v1
9v1-->17v1
8v1-->|0|18v1
12v1-->13v1
11v1-->12v1
13v1-->14v1
13v1-->15v1
16v1-->|0|11v1
8v1-->|1|19v1
17v1-->20v1
18v1-->9v1
19v1-->|1|11v1
20v1-->21v1
21v1--o10v1; linkStyle 20 stroke:red
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    4v1
    10v1
    subgraph sg_1v1_var_contacts ["var <tt>contacts</tt>"]
        1v1
        2v1
    end
    subgraph sg_1v1_var_exposed ["var <tt>exposed</tt>"]
        3v1
    end
    subgraph sg_1v1_var_new_exposed ["var <tt>new_exposed</tt>"]
        5v1
        6v1
        7v1
        8v1
    end
end
subgraph sg_2v1 ["sg_2v1 stratum 0"]
    9v1
end
subgraph sg_3v1 ["sg_3v1 stratum 0"]
    16v1
    14v1
    15v1
    subgraph sg_3v1_var_notifs ["var <tt>notifs</tt>"]
        11v1
        12v1
        13v1
    end
end
subgraph sg_4v1 ["sg_4v1 stratum 1"]
    20v1
end
