dfir_rs/tests/snapshots/surface_codegen__recv_expr@graphvis_dot.snap
---
source: dfir_rs/tests/surface_codegen.rs
expression: df.meta_graph().unwrap().to_dot(cfg)
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_stream(send_recv.1)", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) for_each(|v| print!(\"{:?}\", v))", shape=house, fillcolor="#ffff88"]
    n1v1 -> n2v1
    subgraph sg_1v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1"
        n1v1
        n2v1
    }
}
