dfir_rs/tests/snapshots/surface_codegen__recv_expr@graphvis_mermaid.snap
---
source: dfir_rs/tests/surface_codegen.rs
expression: df.meta_graph().unwrap().to_mermaid(cfg)
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_stream(send_recv.1)</code>"/]:::pullClass
2v1[/"(2v1) <code>for_each(|v| print!(&quot;{:?}&quot;, v))</code>"\]:::pushClass
1v1-->2v1
subgraph sg_1v1 ["sg_1v1"]
    1v1
    2v1
end
