dfir_rs/tests/snapshots/surface_codegen__sort@graphvis_mermaid.snap
---
source: dfir_rs/tests/surface_codegen.rs
expression: "df.meta_graph().unwrap().to_mermaid(& Default :: default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>None source_stream(items_recv)</code>"/]:::pullClass
2v1[\"(2v1) <code>None sort()</code>"/]:::pullClass
3v1[/"(3v1) <code>None for_each(|v| print!(&quot;{:?}, &quot;, v))</code>"\]:::pushClass
4v1["(4v1) <code>None handoff</code>"]:::otherClass
2v1-->3v1
1v1-->4v1
4v1--x2v1; linkStyle 2 stroke:red
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    2v1
    3v1
end
